# strip_bom

./: Cargo.toml  README.md
examples/: from_file.rs  from_vec.rs  str.rs
src/: lib.rs
tests/: bom-sushi.txt  test.rs
